--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,75 +1,83 @@
-name: Update Only Last Committed File
+name: Terraform Deploy
 
 on:
-  push:
-    branches:
-      - main  # change this to your branch if needed
+  workflow_dispatch:
 
 jobs:
-  update-committed-file:
+  terraform:
     runs-on: [self-hosted, linux, x64]
 
-    steps:
-      # 1️⃣ Show the runner workspace
-      - name: Show runner workspace
-        run: |
-          echo "Runner workspace: $GITHUB_WORKSPACE"
+    env:
+      # AWS credentials
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
-      # 2️⃣ Ensure repository exists in target directory
-      - name: Ensure repository exists
+      # Terraform / bootstrap variables from GitHub secrets
+      GITHUB_ENVIRONMENT: ${{ secrets.TF_ENVIRONMENT }}
+      GITHUB_REGION: ${{ secrets.AWS_REGION }}
+      GITHUB_AWS_PROFILE: ${{secrets.AWS_PROFILE}}
+      GITHUB_TF_BUCKET: ${{ secrets.TF_S3_BUCKET }}
+      GITHUB_TF_DDB_TABLE: ${{ secrets.TF_DDB_TABLE }}
+      GITHUB_CLUSTER_NAME: ${{ secrets.TF_CLUSTER_NAME }}
+      GITHUB_CLUSTER_VERSION: ${{ secrets.CLUSTER_VERSION }}
+      GITHUB_VPC_CIDR: ${{ secrets.TF_VPC_CIDR }}
+      GITHUB_NODE_GROUP_NAME: ${{ secrets.TF_NODE_GROUP_NAME }}
+      GITHUB_INSTANCE_TYPE: ${{ secrets.TF_NODE_INSTANCE_TYPE }}
+      GITHUB_MIN_SIZE: ${{ secrets.TF_MIN_SIZE }}
+      GITHUB_MAX_SIZE: ${{ secrets.TF_MAX_SIZE }}
+      GITHUB_DESIRED_SIZE: ${{ secrets.TF_DESIRED_SIZE }}
+      GITHUB_DISK_SIZE: ${{ secrets.TF_DISK_SIZE }}
+      GITHUB_PROJECT_NAME: ${{ secrets.TF_PROJECT_NAME }}
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Navigate to Terraform directory
         run: |
-          TARGET_DIR="$GITHUB_WORKSPACE/eks-terraform"  # Change this to your existing code path
-          echo "Target directory: $TARGET_DIR"
-          
-          if [ ! -d "$TARGET_DIR/.git" ]; then
-            echo "First run detected: cloning the repository..."
-            git clone https://github.com/${{ github.repository }} "$TARGET_DIR"
+          cd terraform-eks
+          pwd
+          ls -la
+        working-directory: ${{ github.workspace }}
+
+      - name: Ensure tf-admin AWS profile
+        run: |
+          if aws configure list-profiles | grep -q '^tf-admin$'; then
+            echo "✅ tf-admin profile already exists."
           else
-            echo "Repository already exists at $TARGET_DIR"
+            aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile tf-admin
+            aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY --profile tf-admin
+            aws configure set region $AWS_DEFAULT_REGION --profile tf-admin
+            echo "✅ tf-admin profile created successfully."
           fi
 
-      # 3️⃣ Get last committed files
-      - name: Get last committed files
-        id: last_commit
+      - name: Run Bootstrap Script
         run: |
-          cd "$GITHUB_WORKSPACE/eks-terraform"
-          echo "Detecting last commit files..."
-          LAST_COMMIT=$(git rev-parse HEAD)
-          echo "Last commit SHA: $LAST_COMMIT"
+          chmod +x ./bootstrap.sh
+          ./bootstrap.sh
+        working-directory: terraform-eks
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
-          CHANGED_FILES=$(git diff-tree --no-commit-id --name-only -r $LAST_COMMIT)
-          echo "Files changed in last commit:"
-          echo "$CHANGED_FILES"
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: terraform-eks
 
-          echo "changed_files<<EOF" >> $GITHUB_OUTPUT
-          echo "$CHANGED_FILES" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      # 4️⃣ Update only the last committed files in existing directory
-      - name: Update changed files in existing directory
+      - name: Terraform Plan
         run: |
-          TARGET_DIR="$GITHUB_WORKSPACE/eks-terraform"
-          echo "Updating files in $TARGET_DIR"
+          terraform plan \
+            -var-file="static.tfvars" \
+            -var-file="envs/${{ secrets.ENVIRONMENT }}.tfvars" \
+            -out=tfplan.out
+        working-directory: terraform-eks
 
-          cd "$TARGET_DIR"
-          echo "${{ steps.last_commit.outputs.changed_files }}" | while read file; do
-            if [ -n "$file" ]; then
-              echo "Updating: $file"
-              mkdir -p "$(dirname "$file")"
-              git show HEAD:"$file" > "$file"
-            fi
-          done
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan.out
+        working-directory: terraform-eks
 
-          echo "✅ Updated only the last committed files in $TARGET_DIR"
-
-      # 5️⃣ Summary
-      - name: Summary
-        run: |
-          TARGET_DIR="$GITHUB_WORKSPACE/eks-terraform"
-          echo "## 🧩 Code Update Summary" >> $GITHUB_STEP_SUMMARY
-          echo "- Repository: ${{ github.repository }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Updated folder: $TARGET_DIR" >> $GITHUB_STEP_SUMMARY
-          echo "- Changed files:" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          echo "${{ steps.last_commit.outputs.changed_files }}" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+      - name: Output EKS Cluster Info
+        run: terraform output
+        working-directory: terraform-eks
