--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -102,6 +102,15 @@ jobs:
             terraform -chdir=terraform-eks workspace select ${{ env.GITHUB_ENVIRONMENT }} || \
             terraform -chdir=terraform-eks workspace new ${{ env.GITHUB_ENVIRONMENT }}
           fi
+      # 8️⃣ Debug current directory before validate
+      - name: Check Current Directory Before Validate
+        run: |
+          echo "📌 Current directory:"
+          pwd
+          echo "📂 Listing files:"
+          ls -la
+          echo "📂 Listing Terraform modules:"
+          ls -la terraform-eks/.terraform || echo ".terraform folder not found"
 
       # 8️⃣ Terraform Validate
       - name: Terraform Validate
